--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
-        classpath 'com.google.gms:google-services:4.3.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
+        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
+
     }
     configurations.all {
         resolutionStrategy {
